<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:text="@string/from_date"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textViewColor"/>

                <EditText
                    android:id="@+id/etFromDate"
                    android:hint="@string/format_date"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="datetime"/>

                <TextView
                    android:text="@string/to_date"
                    android:textColor="@color/textViewColor"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etToDate"
                    android:hint="@string/format_date"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="datetime" />

                <TextView
                    android:text="@string/start_time"
                    android:textColor="@color/textViewColor"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etStartTime"
                    android:hint="@string/format_time"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="datetime"/>

                <TextView
                    android:text="@string/end_time"
                    android:textColor="@color/textViewColor"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etEndTime"
                    android:hint="@string/format_time"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="datetime"/>

                <TextView
                    android:text="@string/location"
                    android:textColor="@color/textViewColor"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/description"
                    android:textColor="@color/textViewColor"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bAddEvent"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:text="Add Event"
        android:textSize="15sp"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold"/>

</LinearLayout>